Bug 101638 - [FILEOPEN,DOC] Bullets in a graph are too large
Summary: [FILEOPEN,DOC] Bullets in a graph are too large
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: filter:doc, notBibisectable, regression
Depends on:
Blocks: DOC
  Show dependency treegraph
 
Reported: 2016-08-21 15:35 UTC by Oliver Sander
Modified: 2017-03-13 22:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The .doc file in question (74.00 KB, application/msword)
2016-08-21 15:36 UTC, Oliver Sander
Details
File as rendered by MS Office (25.58 KB, application/pdf)
2016-08-21 15:37 UTC, Oliver Sander
Details
File as rendered by LO 5.2.0.4 (525.36 KB, application/pdf)
2016-08-21 15:38 UTC, Oliver Sander
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Sander 2016-08-21 15:35:26 UTC
I have a .doc file which contains a chart, which in turn contains a few dark red circles.  LibreOffice renders these much larger than MSOffice does.
Comment 1 Oliver Sander 2016-08-21 15:36:45 UTC
Created attachment 126936 [details]
The .doc file in question
Comment 2 Oliver Sander 2016-08-21 15:37:46 UTC
Created attachment 126937 [details]
File as rendered by MS Office
Comment 3 Oliver Sander 2016-08-21 15:38:50 UTC
Created attachment 126938 [details]
File as rendered by LO 5.2.0.4
Comment 4 Johnny_M 2016-09-17 23:14:26 UTC
Confirmed with:
- 64-bit Linux Mint 17.1:
Version: 5.1.5.2
Build ID: 1:5.1.5~rc2-0ubuntu1~trusty1
CPU Threads: 2; OS Version: Linux 3.13; UI Render: default; 
Locale: de-DE (en_GB.UTF-8); Calc: group

- 32-bit Windows Vista:
Version: 5.2.1.2
Build-ID: 31dd62db80d4e60af04904455ec9c9219178d620
CPU-Threads: 2; BS-Version: Windows 6.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group

- 32-bit Window Vista (as portable release):
LO 3.6.4.3 (de-DE)

With LO 3.5.3.2 (de-DE) (portable release on Vista): Issue does not occur. ==> regression

MS Office Word 2003 shows the file correctly.
Comment 5 Oliver Sander 2016-10-21 18:11:56 UTC
Reproduced in

LibreOfficeDev 5.3.0.0.alpha1 f4ca1573fcf445164c068c1046ab5d084e1b005f
Comment 6 Joel Madero 2016-10-26 04:01:08 UTC
I tested this all the way back to 3.3 and I see it on every single iteration. Are we 100% sure that this is a regression?
Comment 7 Johnny_M 2016-10-26 11:00:11 UTC
(In reply to Joel Madero from comment #6)
> I tested this all the way back to 3.3 and I see it on every single
> iteration. Are we 100% sure that this is a regression?

Thanks for the test!

I just double-checked with:

- 32-bit Debian:
LibreOffice 3.5.3.2 
Build ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
==> Issue occurs indeed


- 32-bit Windows Vista (with LO 5.2.2 installed), as portable releases:
Version 4.0.4.2 (Build ID: 9e9821abd0ffdbc09cd8c52eaa574fa09eb08f2)
==> Issue occurs

Version 3.6.4.3 (Build ID: 2ef5aff)
==> Issue occurs

LibreOffice 3.5.3.2 
Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
==> Issue doesn't occur

LibreOffice 3.4.5 
OOO340m1 (Build:502)
==> Issue doesn't occur

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
==> Can't open the file

I assume that you tested on Linux, right? Given that, it only seems to be a regression on Windows (unless it has to do with the portable releases), maybe due to some cross-system alignment. While it has apparently always been there on Linux.

I'm not sure what to do with the Keywords and Version bug fields in such a case.
Comment 8 Commit Notification 2017-01-31 09:26:55 UTC
Patrick J committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3a47c09500828d27c096c5bfb461c61f6e71378

tdf#101638 diameter and radius were mixed up, devide by two

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Johnny_M 2017-02-01 19:00:28 UTC
Thanks for the fix!

Could someone please cherry-pick this for LO 5.3 and 5.2 in Gerrit? It errors out with "wrong author" in if I try.
Comment 10 Commit Notification 2017-02-07 08:35:41 UTC
Patrick J committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=faad3143c88b9b378b273abef36727405dcf3697&h=libreoffice-5-3

tdf#101638 diameter and radius were mixed up, devide by two

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 vihsa 2017-03-11 02:23:51 UTC
verified.
Version: 5.4.0.0.alpha0+ / Build ID: febc116 / android 5.1

bullets in graph are appearing normal similar to mso attachment.