tdf#101638 diameter and radius were mixed up, devide by two

Change-Id: Iaece1ca3439ab3e1029156a5847768728b53b96e
Reviewed-on: https://gerrit.libreoffice.org/33717
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit e3a47c09500828d27c096c5bfb461c61f6e71378)
Reviewed-on: https://gerrit.libreoffice.org/33894
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>